# pygloo

./: .gitignore  CMakeLists.txt  README.md  main.cc  run.sh  setup.py
cmake/Modules/: Findgloo.cmake  Findhiredis.cmake
hack/: build.sh  build_wheels.sh  check_module.py
include/: collective.h  send_recv.h  transport.h
src/: CMakeLists.txt  allgather.cc  allreduce.cc  barrier.cc  broadcast.cc  gather.cc  recv.cc  reduce.cc  reduce_scatter.cc  rendezvous.cc  scatter.cc  send.cc  transport.cc
tests/: test_allreduce.py  test_allreduce_ib.py  test_allreduce_tcp.py  test_send_ib.py  test_send_overlap.py  test_send_recv.py  test_send_recv_tcp.py
tests/gloo/: CMakeLists.txt  test_ib_device.cpp  test_tcp_store.cpp
tests/ray/: test_context.py
